...
            "state" : "translated",
            "value" : "Select a helper and a task"
          }
        }
      }
    },
    "お手伝いする人を選んでください" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please select a helper"
          }
...
            "state" : "translated",
            "value" : "Task Management"
          }
        }
      }
    },
    "お手伝い記録" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Help Record"
          }
...
            "state" : "translated",
            "value" : "Help"
          }
        }
      }
    },
    "ホーム" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
...
            "state" : "translated",
            "value" : "Select Child"
          }
        }
      }
    },
    "完了" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
...
            "state" : "translated",
            "value" : "Next, let's learn how to\nrecord chores"
          }
        }
      }
    },
    "次へ" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
          }
...
            "state" : "translated",
            "value" : "Edit"
          }
        }
      }
    },
    "記録" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Record"
          }
...
            "state" : "translated",
            "value" : "Record Screen"
          }
        }
      }
    },
    "設定" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
...
            "state" : "translated",
            "value" : "Unavailable"
          }
        }
      }
    },
    "閉じる" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
        }
      }
    },
    "開始" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
          }
...
